--- a/layouts/partials/blocks/people.html
+++ b/layouts/partials/blocks/people.html
@@ -13,10 +13,12 @@
 
 <div class="row justify-content-center people-widget">
   {{ with $block.content.title }}
-    <div class="section-heading col-12 mb-3 text-center">
-      <h1 class="mb-0">{{ . | markdownify | emojify }}</h1>
-      {{ with $block.content.subtitle }}<p class="mt-1">{{ . | markdownify | emojify }}</p>{{ end }}
-    </div>
+  <div class="section-heading col-12 mb-3 text-center">
+    <h1 class="mb-0">
+      {{ . | markdownify | emojify }}
+    </h1>
+    {{ with $block.content.subtitle }}<p class="mt-1">{{ . | markdownify | emojify }}</p>{{ end }}
+  </div>
   {{ end }}
 
   {{ with $block.content.text }}
@@ -26,56 +28,69 @@
   {{ end }}
 
   {{ range $block.content.user_groups }}
-    {{ $query := where (where site.Pages "Section" "authors") ".Params.user_groups" "intersect" (slice .) }}
 
-    {{/* Sort */}}
-    {{ $sort_by := $block.content.sort_by | default "Params.education.start_year" }}
-    {{ $sort_by = partial "blox-core/functions/get_sort_by_parameter" $sort_by }}
-    {{ $sort_ascending := $block.content.sort_ascending | default true }}
-    {{ $sort_order := cond $sort_ascending "asc" "desc" }}
-    {{ $query = sort $query $sort_by $sort_order }}
+  {{ $user_groups :=  default . }}
 
-    {{if $query | and (gt (len $block.content.user_groups) 1) }}
-      <div class="col-md-12">
-        <h2 class="mb-4">{{ . | markdownify }}</h2>
-      </div>
-    {{end}}
+  {{ $query := where (where site.Pages.ByPublishDate "Section" "authors") ".Params.user_groups" "intersect" (slice .) }}
 
-    {{ range $query }}
-      {{ $avatar := (.Resources.ByType "image").GetMatch "*avatar*" }}
-      {{/* Get link to user's profile page. */}}
-      {{ $link := "" }}
-      {{ with site.GetPage (printf "/authors/%s" (path.Base .File.Dir)) }}
-        {{ $link = .RelPermalink }}
-      {{ end }}
-      <div class="col-12 col-sm-auto people-person">
-        {{ $src := "" }}
-        {{ if site.Params.features.avatar.gravatar }}
-          {{ $src = printf "https://s.gravatar.com/avatar/%s?s=150" (md5 .Params.email) }}
-        {{ else if $avatar }}
-          {{ $avatar_image := $avatar.Fill "270x300 Top" }}
-          {{ $src = $avatar_image.RelPermalink }}
-        {{ end }}
-        {{ if $src }}
-          {{ $avatar_shape := site.Params.features.avatar.shape | default "circle" }}
-          {{with $link}}<a href="{{.}}">{{end}}<img width="270" height="300" loading="lazy" class="avatar {{if eq $avatar_shape "square"}}avatar-square{{else}}avatar-circle{{end}}" src="{{ $src }}" alt="Avatar">{{if $link}}</a>{{end}}
-        {{ end }}
+  {{/* Sort */}}
+  {{ $sort_by := $block.content.sort_by | default "Params.education.start_year" }}
+  {{ $sort_by = partial "functions/get_sort_by_parameter" $sort_by }}
+  {{ $sort_ascending := $block.content.sort_ascending | default true }}
+  {{ $sort_order := cond $sort_ascending "asc" "desc" }}
+  {{ $query = sort $query $sort_by $sort_order }}
 
-        <div class="portrait-title">
-          <h2>{{with $link}}<a href="{{.}}">{{end}}{{ .Title }}{{if $link}}</a>{{end}}</h2>
-          {{ if and $show_organizations .Params.organizations }}{{ range .Params.organizations }}<h3>{{ .name }}</h3>{{ end }}{{ end }}
-          {{ if and $show_role .Params.role }}
-            <h3>{{ .Params.role | markdownify | emojify }}
-              {{ if and .Params.education.start_year .Params.destination }}
-                  ({{ .Params.education.start_year | markdownify | emojify }})
-              {{ end }}
-            </h3>
-          {{ end }}
-          {{ if and $show_destination .Params.destination }}<h3 class="font-weight-bold">{{ .Params.destination | markdownify | emojify }}</h3>{{ end }}
-          {{ if $show_social }}{{ partial "social_links" . }}{{ end }}
-          {{ if and $show_interests .Params.interests }}<p class="people-interests">{{ delimit .Params.interests ", " | markdownify | emojify }}</p>{{ end }}
-        </div>
-      </div>
+  {{if $query | and (gt (len $block.content.user_groups) 1) }}
+  <div class="col-md-12">
+    <h2 class="mb-4">{{ $user_groups | markdownify }}</h2>
+  </div>
+  {{end}}
+
+  {{ range $query }}
+  {{ $avatar := (.Resources.ByType "image").GetMatch "*avatar*" }}
+  {{/* Get link to user's profile page. */}}
+  {{ $link := "" }}
+  {{ with site.GetPage (printf "/authors/%s" (path.Base .File.Dir)) }}
+  {{ $link = .RelPermalink }}
+  {{ end }}
+  <div class="col-12 col-sm-auto people-person">
+    {{ $src := "" }}
+    {{ if site.Params.features.avatar.gravatar }}
+    {{ $src = printf "https://s.gravatar.com/avatar/%s?s=150" (md5 .Params.email) }}
+    {{ else if $avatar }}
+    {{ $avatar_image := $avatar.Fill "270x300 Top" }}
+    {{ $src = $avatar_image.RelPermalink }}
     {{ end }}
+    {{ if $src }}
+    {{ $avatar_shape := site.Params.features.avatar.shape | default "circle" }}
+    {{with $link}}<a href="{{.}}">{{end}}<img width="270" height="300" loading="lazy"
+        class="avatar {{if eq $avatar_shape " square"}}avatar-square{{else}}avatar-circle{{end}}" src="{{ $src }}"
+        alt="Avatar">{{if $link}}</a>{{end}}
+    {{ end }}
+
+    <div class="portrait-title">
+      <h2>{{with $link}}<a href="{{.}}">{{end}}{{ .Title }}{{if $link}}</a>{{end}}</h2>
+      {{ if and $show_organizations .Params.organizations }}{{ range .Params.organizations }}<h3>{{ .name }}</h3>{{ end
+      }}{{ end }}
+      {{ if and $show_role .Params.role }}
+      <h3>{{ .Params.role | markdownify | emojify }}
+        {{ if .Params.join_year }}({{.Params.join_year}}{{ if .Params.graduated_year }}-{{ .Params.graduated_year }}{{ end }}) {{ end }}
+        <!-- ({{ .Params.join_year }}-{{ .Params.graduated_year }})  -->
+        <!-- {{ range $index, $value := .Params.education.courses }} -->
+        <!-- get last year  -->
+        <!-- ({{ range $k, $v := $value }} {{ if eq $k "year" }} {{ $v }} {{ end }} {{ end }})  -->
+        <!-- {{ break }} -->
+        <!-- {{ end }} -->
+      </h3> {{ end }}
+      {{ if and $show_destination .Params.destination }}
+      {{ $join := default (i18n "join") | default "join" }}
+      <h3 class="font-weight-bold">{{ $join }}{{ .Params.destination |
+        markdownify | emojify }}</h3>{{ end }}
+      {{ if $show_social }}{{ partial "social_links" . }}{{ end }}
+      {{ if and $show_interests .Params.interests }}<p class="people-interests">{{ delimit .Params.interests ", " |
+        markdownify | emojify }}</p>{{ end }}
+    </div>
+  </div>
+  {{ end }}
   {{ end }}
 </div>
