--- a/layouts/partials/blocks/contact.html
+++ b/layouts/partials/blocks/contact.html
@@ -23,7 +23,7 @@
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 {{ end }}
 
-<div class="col-12 {{if eq $columns "2"}}col-lg-8{{end}}">
+<div class="col-12 {{if eq $columns "2"}}col-lg-8{{end}}" style="font-size: large;">
   {{ with $block.content.text }}<p>{{ . | emojify | $page.RenderString }}</p>{{ end }}
 
   {{ if $use_form }}
@@ -96,7 +96,7 @@
     {{ end }}
 
     {{ $addr_formatted := "" }}{{/* Scoping for maps. */}}
-    {{ if $data.address.street | or $data.address.city | or $data.address.region | or $data.address.postcode | or $data.address.country }}
+    {{ if $data.address.street | or $data.address.city | or $data.address.region | or $data.address.postcode | or $data.address.country |  }}
       {{ $addr_formatted = partial "functions/get_address" (dict "root" . "address" $data.address) }}
       <li>
         <i class="fa-li fas fa-map-marker fa-2x" aria-hidden="true"></i>
@@ -159,11 +159,11 @@
     <input id="map-provider" value="{{ lower site.Params.features.map.provider }}">
     <input id="map-lat" value="{{ $data.coordinates.latitude }}">
     <input id="map-lng" value="{{ $data.coordinates.longitude }}">
-    <input id="map-dir" value="{{ $addr_formatted }}">
+    <input id="map-dir" value="{{ $addr_formatted }} {{ $data.directions }}">
     <input id="map-zoom" value="{{ site.Params.features.map.zoom | default "15" }}">
     <input id="map-api-key" value="{{ site.Params.features.map.api_key }}">
   </div>
-  <div id="map"></div>
+  <div id="map" style="height: 200%;"></div>
   {{ end }}
 
-</div>
+  </div>
