--- a/layouts/partials/blocks/people.html
+++ b/layouts/partials/blocks/people.html
@@ -47,7 +47,9 @@
   {{end}}
 
   {{ range $query }}
+  {{/* team page viewer */}}
   {{ $avatar := (.Resources.ByType "image").GetMatch "*avatar*" }}
+  
   {{/* Get link to user's profile page. */}}
   {{ $link := "" }}
   {{ with site.GetPage (printf "/authors/%s" (path.Base .File.Dir)) }}
@@ -56,16 +58,22 @@
   <div class="col-12 col-sm-auto people-person">
     {{ $src := "" }}
     {{ if site.Params.features.avatar.gravatar }}
-    {{ $src = printf "https://s.gravatar.com/avatar/%s?s=150" (md5 .Params.email) }}
+    {{ $src = partial "functions/get_avatar" (dict "email" .Params.email "height" 300 "width" 270) }}
     {{ else if $avatar }}
     {{ $avatar_image := $avatar.Fill "270x300 Top" }}
     {{ $src = $avatar_image.RelPermalink }}
+    {{ else }}
+    {{ $src = partial "functions/get_avatar" (dict "email" .Params.email "height" 300 "width" 270) }}
     {{ end }}
     {{ if $src }}
     {{ $avatar_shape := site.Params.features.avatar.shape | default "circle" }}
-    {{with $link}}<a href="{{.}}">{{end}}<img width="270" height="300" loading="lazy"
+      {{with $link}}
+      <a href="{{.}}">
+      {{end}}
+      <img width="270" height="300" loading="lazy"
         class="avatar {{if eq $avatar_shape " square"}}avatar-square{{else}}avatar-circle{{end}}" src="{{ $src }}"
-        alt="Avatar">{{if $link}}</a>{{end}}
+        alt="Avatar">
+        {{if $link}}</a>{{end}}
     {{ end }}
 
     <div class="portrait-title">
