--- a/layouts/partials/functions/get_avatar.html
+++ b/layouts/partials/functions/get_avatar.html
@@ -4,9 +4,10 @@
 {{ $email := .email }}
 {{ $height := .height | default 300 }}
 {{ $width := .width | default 270 }}
+{{ $avatar_type := site.Params.features.avatar.type | default 404 }}
 
 <!--  -->
-{{ $url := printf "https://cravatar.cn/avatar/%s?s=%d" (md5 $email) $height }}
+{{ $url := printf "https://cravatar.cn/avatar/%s?s=%d&d=%s" (md5 $email) $height $avatar_type }}
 {{ with resources.GetRemote $url }}
   {{ with .Err }}
     {{ errorf "%s" . }}
@@ -17,7 +18,7 @@
   {{ end }}
 {{ else }}
   {{ errorf "无法获取远程资源 %q" $url }}
-  {{ $url := printf "https://s.gravatar.com/avatar/%s?s=%d" (md5 $email) $height }}
+  {{ $url := printf "https://cravatar.cn/avatar/%s?s=%d&d=%s" (md5 $email) $height $avatar_type }}
   {{ with resources.GetRemote $url }}
     {{ with .Err }}
       {{ errorf "%s" . }}
