--- a/layouts/partials/blocks/v1/about.html
+++ b/layouts/partials/blocks/v1/about.html
@@ -66,7 +66,11 @@
         <!-- {{ with $person.destination }}({{ $graduate_state | markdownify | emojify }})</h3>{{ end }} -->
         {{ end }}
         {{ with $person.destination }}<h3 class="font-weight-bold">
-          {{ $join }}{{ . | markdownify | emojify }}
+          {{ . | markdownify | emojify }}
+          {{ $destination_type := $person.destination_type }}
+          {{ with $person.destination_type }}
+          ({{ $destination_type }})
+        {{ end }}
         </h3>{{ end }}
 
         {{ range $person.organizations }}
